--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
         <header class="page-header">
             <div class="main-nav conteiner">
                 <nav class="nav-content">
-                    <a href="" lang="en" class="logo logo-header link"
-                        ><span class="logo-accent">Web</span>Studio</a
-                    >
+                    <a href="" lang="en" class="logo logo-header link"><span class="logo-accent">Web</span>Studio</a>
                     <ul class="naw-list list">
                         <li class="naw-item">
                             <a href="" class="naw-link current link">Студия</a>
@@ -52,8 +50,8 @@
         </header>
         <main>
             <!-- Герой -->
-            <section class="section">
-                <div class="main-hero conteiner">
+            <section class="hero section">
+                <div class=" conteiner">
                     <div class="hero-content">
                         <h1 class="hero-title">Эффективные решения<br />для вашего бизнеса</h1>
                         <button type="button" class="hero-button">Заказать услугу</button>
@@ -132,51 +130,52 @@
                 </div>
             </section>
             <!-- Команда -->
-            <section class="section">
-                <div class="main-team conteiner">
-                  <h2 class="team-title">Наша команда</h2>
-                  <ul class="team-list list">
-                    <li class="team-item">
-                      <img src="./images/team-card-1.jpg" alt="Фотография Игоря Демьяненко" width="270" height="260" />
-                      <h3 class="team-name">Игорь Демьяненко</h3>
-                      <p lang="en" class="team-post">Product Designer</p>
-                    </li>
-                    <li class="team-item">
-                      <img src="./images/team-card-2.jpg" alt="Фотография Ольги Репиной" width="270" height="260" />
-                      <h3 class="team-name">Ольга Репина</h3>
-                      <p lang="en" class="team-post">Frontend Developer</p>
-                    </li>
-                    <li class="team-item">
-                      <img src="./images/team-card-3.jpg" alt="Фотография Николая Тарасова" width="270" height="260" />
-                      <h3 class="team-name">Николай Тарасов</h3>
-                      <p lang="en" class="team-post">Marketing</p>
-                    </li>
-                    <li class="team-item">
-                      <img src="./images/team-card-4.jpg" alt="Фотография Михаила Ермакова" width="270" height="260" />
-                      <h3 class="team-name">Михаил Ермаков</h3>
-                      <p lang="en" class="team-post">UI Designer</p>
-                    </li>
-                  </ul>
+            <section class="team section">
+                <div class="conteiner">
+                    <h2 class="team-title">Наша команда</h2>
+                    <ul class="team-list list">
+                        <li class="team-item">
+                            <img src="./images/team-card-1.jpg" alt="Фотография Игоря Демьяненко" width="270" height="260" />
+                            <h3 class="team-name">Игорь Демьяненко</h3>
+                            <p lang="en" class="team-post">Product Designer</p>
+                        </li>
+                        <li class="team-item">
+                            <img src="./images/team-card-2.jpg" alt="Фотография Ольги Репиной" width="270" height="260" />
+                            <h3 class="team-name">Ольга Репина</h3>
+                            <p lang="en" class="team-post">Frontend Developer</p>
+                        </li>
+                        <li class="team-item">
+                            <img src="./images/team-card-3.jpg" alt="Фотография Николая Тарасова" width="270" height="260" />
+                            <h3 class="team-name">Николай Тарасов</h3>
+                            <p lang="en" class="team-post">Marketing</p>
+                        </li>
+                        <li class="team-item">
+                            <img src="./images/team-card-4.jpg" alt="Фотография Михаила Ермакова" width="270" height="260" />
+                            <h3 class="team-name">Михаил Ермаков</h3>
+                            <p lang="en" class="team-post">UI Designer</p>
+                        </li>
+                    </ul>
                 </div>
             </section>
         </main>
-        <footer >
-          <div class="footer conteiner">
-            <a href="" lang="en" class="logo logo-footer link"><span class="logo-accent">Web</span>Studio</a>
-            <address class="address">
-              <ul class="address-list list">
-                <li class="address-item">
-                  <a href="" class="address-link link">Киев, пр-т Леси Украинки, 26</a>
-                </li>
-                <li class="address-item">
-                  <a href="mailto:info@devstudio.com" lang="en" class="address-link info link">info@devstudio.com</a>
-                </li>
-                <li class="address-item">
-                  <a href="tel:+380961111111" class="address-link info link">+38 096 111 11 11</a>
-                </li>
-              </ul>
-            </address>
-          </div>
+        <footer class="footer">
+            <div class=" conteiner">
+                <a href="" lang="en" class="logo logo-footer link"><span class="logo-accent">Web</span>Studio</a>
+                <address class="address">
+                    <ul class="address-list list">
+                        <li class="address-item">
+                            <a href="" class="address-link link">Киев, пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li class="address-item">
+                            <a href="mailto:info@devstudio.com" lang="en" class="address-link info link">info@devstudio.com</a>
+                        </li>
+                        <li class="address-item">
+                            <a href="tel:+380961111111" class="address-link info link">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+          
             
         </footer>
     </body>
