--- a/portfolio.html
+++ b/portfolio.html
@@ -105,21 +105,23 @@
        </div>
     </section>
 </main>
-    <footer class="footer conteiner">
-        <a href="" lang="en" class="logo logo-footer link"><span class="logo-accent">Web</span>Studio</a>
-        <address class="address">
-            <ul class="address-list list">
-                <li class="address-item">
-                    <a href="" class="address-link link">Киев, пр-т Леси Украинки, 26</a>
-                </li>
-                <li class="address-item">
-                    <a href="mailto:info@devstudio.com" lang="en" class="address-link info link">info@devstudio.com</a>
-                </li>
-                <li class="address-item">
-                    <a href="tel:+380961111111" class="address-link info link">+38 096 111 11 11</a>
-                </li>
-            </ul>
-        </address>
+    <footer class="footer">
+        <div class=" conteiner">
+            <a href="" lang="en" class="logo logo-footer link"><span class="logo-accent">Web</span>Studio</a>
+            <address class="address">
+                <ul class="address-list list">
+                    <li class="address-item">
+                        <a href="" class="address-link link">Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li class="address-item">
+                        <a href="mailto:info@devstudio.com" lang="en" class="address-link info link">info@devstudio.com</a>
+                    </li>
+                    <li class="address-item">
+                        <a href="tel:+380961111111" class="address-link info link">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
  </body>
 </html>
